Updated Dummy Path

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
     "from google.oauth2 import service_account \n",
     "\n",
     "#Authentication\n",
-    "key_path = \"/home/om/Documents/Big_query/ncca-361107-9f401816514a.json\" ##Replace with path to your service token file\n",
+    "key_path = \"/File.json\" ##Replace with path to your service token file\n",
     "credentials = service_account.Credentials.from_service_account_file(\n",
     "    key_path,\n",
     "    scopes=[\"https://www.googleapis.com/auth/cloud-platform\"],\n",
